--- a/templates/quotepad/productprice_form.html
+++ b/templates/quotepad/productprice_form.html
@@ -15,6 +15,16 @@
         </div>
 
         <div class="form-group">
+            {{ form.fuel_type.label}} *<br>
+            {{ form.fuel_type }}
+        </div>
+
+        <div class="form-group">
+            {{ form.boiler_type.label}} *<br>
+            {{ form.boiler_type }}
+        </div>
+
+        <div class="form-group">
             {{ form.model_name.label}} *<br>
             {{ form.model_name }}
         </div>
@@ -28,16 +38,17 @@
             {{ form.price.label}} (£) *<br>
             {{ form.price }}
         </div>
+        
+        <div class="form-group">
+            {{ form.guarantee.label}}<br>
+            {{ form.guarantee}}<br>
+        </div>
 
         <div class="form-group">
             {{ form.product_image.label}}<br>
             {{ form.product_image}}<br>
         </div>
 
-        <div class="form-group">
-            {{ form.guarantee.label}}<br>
-            {{ form.guarantee}}<br>
-        </div>
         
         <button class="btn btn-primary" type="submit">Save</button>
         <a href="/productpricelist/" class="btn btn-secondary">Cancel</a>
