--- a/templates/yourheat/orderforms/radiatorform.html
+++ b/templates/yourheat/orderforms/radiatorform.html
@@ -326,12 +326,7 @@
 
     function delete_dropdown_elements(id) {
 
-        console.log(id);
-        var select = document.getElementById(id);    
-        var length = select.options.length;
-        for (i = length-1; i >= 0; i--) {
-            select.options[i] = null;
-        }
+        document.getElementById(id).innerText = null;
     }
 
     function createOption(id, value) {
